src/objects/C3P0_CKW__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C3P0_FO__c</fullName>
        <label>3.0 FO</label>
        <referenceTo>FO__c</referenceTo>
        <relationshipLabel>3.0 CKWs</relationshipLabel>
        <relationshipName>C3P0_CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 CKWs</relationshipLabel>
        <relationshipName>C3P0_CKWs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>Some primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some O-level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed O-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed A-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational studies/tertiary institution certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>3.0 CKWs</relationshipLabel>
        <relationshipName>C3P0_CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE(Photo_URL__c, &quot;Profile Picture&quot;, 300, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <label>3.0 CKW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Gender__c</columns>
        <columns>Age__c</columns>
        <columns>Highest_Level_of_Education__c</columns>
        <columns>Photo_URL__c</columns>
        <columns>Person__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CKW{0000}</displayFormat>
        <label>3.0 CKW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 CKWs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>